# sp-extended-exercise-calculator

./: CMakeLists.txt  README.md  assign_t.hpp  binary_t.hpp  const_t.hpp  expr_t.cpp  expr_t.hpp  listing.tex  term_t.hpp  test_calculator.cpp  unary_t.hpp  var_t.hpp
.github/workflows/: code-standard.yml  cppcheck.yml
